RESOLVED FIXED72693
-webkit-cross-fade rendered incorrectly in overflow divs
https://bugs.webkit.org/show_bug.cgi?id=72693
Summary -webkit-cross-fade rendered incorrectly in overflow divs
Tim Horton
Reported 2011-11-18 00:05:01 PST
Patch shortly.
Attachments
patch (12.39 KB, patch)
2011-11-18 00:50 PST, Tim Horton
simon.fraser: review+
webkit.review.bot: commit-queue-
Radar WebKit Bug Importer
Comment 1 2011-11-18 00:05:58 PST
Tim Horton
Comment 2 2011-11-18 00:50:15 PST
Tim Horton
Comment 3 2011-11-18 00:51:41 PST
Also significantly affects overflow scroll; I'm surprised I didn't notice this earlier.
WebKit Review Bot
Comment 4 2011-11-18 01:38:30 PST
Comment on attachment 115759 [details] patch Attachment 115759 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/10519036 New failing tests: css3/images/cross-fade-overflow-position.html
Tim Horton
Comment 5 2011-11-18 10:06:45 PST
Landed in r100786.
Note You need to log in before you can comment on or make changes to this bug.