-webkit-cross-fade rendered incorrectly in overflow divs https://bugs.webkit.org/show_bug.cgi?id=72693 <rdar://problem/10468564>

Reviewed by Simon Fraser.

Respect the desired source rectangle when rendering the cross-fade.

Test: css3/images/cross-fade-overflow-position.html

* platform/graphics/CrossfadeGeneratedImage.cpp:
(WebCore::CrossfadeGeneratedImage::drawCrossfade):
(WebCore::CrossfadeGeneratedImage::draw):
(WebCore::CrossfadeGeneratedImage::drawPattern):
* platform/graphics/CrossfadeGeneratedImage.h:

Add a test to make sure that -webkit-cross-fade renders correctly inside overflowed areas.

* css3/images/cross-fade-overflow-position.html: Added.
* css3/images/resources/half-circles.svg: Added.
* platform/mac/css3/images/cross-fade-overflow-position-expected.png: Added.
* platform/mac/css3/images/cross-fade-overflow-position-expected.txt: Added.



Canonical link: https://commits.webkit.org/89285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100786 268f45cc-cd09-0410-ab3c-d52691b4dbfc